# tee-on-mac

./: README.md  wasi.wasm
binio/: Cargo.toml
binio-wasm/: Cargo.toml
binio-wasm/src/: lib.rs
binio/src/: lib.rs
helloworld-tonic/: .gitignore  Cargo.toml
helloworld-tonic/proto/: helloworld.proto
tpm/: .gitignore  Cargo.toml
tpm/src/: main.rs
wasi-test/: .gitignore  Cargo.toml
wasi-test/asset/: x.txt
wasi-test/demo/: Cargo.toml
wasi-test/demo/src/: main.rs
wasi-test/src/: logging.rs  main.rs
wasmtime-test/: .gitignore  Cargo.toml
wasmtime-test/demo/: Cargo.toml
wasmtime-test/demo/src/: lib.rs  main.rs
wasmtime-test/src/: help.rs  main.rs  tpm_cmd.rs
web/: .gitignore  Cargo.toml  wasi.wasm
web/html/: index.html  upload.js
web/lib/request/: Cargo.toml
web/lib/request/src/: lib.rs
web/src/: crypto.rs  main.rs  main_1.rs  mem_cache.rs  runtime.rs  utils.rs  wasm_imports.rs
web/wasi/: README.md
web/wasi/hello_world/: filecopy.rs  filecopy.wasm  main.rs  main.wasm
web/wasi/markdown/: Cargo.toml  README.md
web/wasi/markdown/src/: lib.rs
