[package]
name = "web"
version = "0.1.0"
authors = ["yz", "kevin.zhang.canada@gmail.com"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1"
actix-service = "1.0.0"

wasmer-runtime = "0.14.1"
wasmer-middleware-common = "0.14.1"
wasmer-runtime-core = "0.14.1"
wasmer-singlepass-backend = "0.14.1"

tonic = "0.1.1"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

bytes = "0.5.2"
futures = "0.3.1"
env_logger = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "*"
