[package]
name = "web"
version = "0.1.0"
authors = ["yz", "kevin.zhang.canada@gmail.com"]
edition = "2018"

[dependencies]
request = { path="lib/request" }

wasmer-runtime = "0.14.1"
wasmer-middleware-common = "0.14.1"
wasmer-runtime-core = "0.14.1"
wasmer-singlepass-backend = "0.14.1"

tonic = "0.1.1"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

