[package]
name = "web"
version = "0.1.0"
authors = ["yz", "kevin.zhang.canada@gmail.com"]
edition = "2018"

[dependencies]
# request = { path="lib/request" }

wasmer-runtime = "0.14.1"
wasmer-middleware-common = "0.14.1"
wasmer-runtime-core = "0.14.1"
wasmer-singlepass-backend = "0.14.1"
wasmer-wasi = "*"
tonic = "0.1.1"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

actix-web = "2.0"
actix-rt = "1"
actix-service = "1.0.0"
actix-multipart = "0.2.0"
actix-files = "0.2.1"

bytes = "0.5.2"
futures = "0.3.1"
env_logger = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "*"

lazy_static = "1.4.0"
mut_static = "5.0.0"

crypto-hash = "0.3.4"
once_cell = "1.3.1"


