[package]
name = "request"
version = "0.1.0"
edition = "2018"


[dependencies]
actix-web = "2.0"
actix-rt = "1"
actix-service = "1.0.0"
actix-multipart = "0.2.0"
actix-files = "0.2.1"

bytes = "0.5.2"
futures = "0.3.1"
env_logger = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "*"
